--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
 .App {
-  text-align: center;
+  text-align: left;
+}
+
+.Nav {
+  display: flex;
+  justify-content: space-between;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 3.5rem;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Menu-logo {
+  height: 1rem;
+  pointer-events: none;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  margin: 30px;
+  padding: 30px 80px;
+  background-color: #1F2535;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: normal;
+  justify-content: left;
+  font-size: 1.6rem;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-header > h1 {
+  margin-top: 100px;
+  font-size: 5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p {
+  margin-left: 1%;
+  font-size: 20px;
+  font-weight:normal;
 }
+
+.App-link {
+  margin-top: 30px;
+  background-color: white;
+  margin-right: 88%;
+  padding: 10px;
+  /* border: 10px white; */
+  }
